refactor: refactored wallet logs to be wallet transactions